tests/NormalTests/paczka1/fuzzy1/53960506.err
Error in line 1: VZvqwWNTz S731 24,0
Error in line 2: VZvqwWNTz S296 35,3
Error in line 8: 9Z0 S731 30,3
Error in line 13: EXoFs S416 24,2
Error in line 16: EXoFs A57 38,2
Error in line 26: yz5Pb5iQ S416 44,9
Error in line 34: yz5Pb5iQ S731 -1,0
